# Robot-Trains-Robot

./: .gitignore  .gitmodules  README.md  adaptation_module_32.pt  adaptation_module_64.pt  finetune_config.gin  mypy.ini  pyproject.toml  raw_obs.pkl  requirements.txt  setup.py  toddlerbot.code-workspace
docs/: 3d_printing.md  bill_of_materials.md  conf.py  index.rst  install_jetson_RT_kernel.md  jetson_RT_kernel.md  jetson_orin.md  misc.md  questions.md  setup.md  steam_deck.md  teleoperation_arms.md  tips.md  walkthrough.md
examples/: test_dynamixel.py  test_ensemble_mlp.py  test_ft_sensor.py  test_motor_sysid.py  test_ode.py  test_ref_motion.py
launch/: at_leader.sh  swing.sh  swing.yaml  swing_arm_leader.sh  walk.yaml  walk_finetune.sh
motion/: climb.pkl
scripts/: activate_env.sh  build_mujoco.sh  collect_sysID_data.sh  concat_videos.sh  create_env.sh  export_env.sh  md_to_rst.sh  onshape_to_robot.sh  refresh_usb.sh  run_autoencoder.sh  run_autoencoder_sbatch.sh  run_dp_exp_seq.sh  run_exp_seq.sh  run_finetuning.sh  run_rl_exp_seq.sh  run_slurm.sh  run_slurm_interactive.sh  scp_ckpt.sh  scp_dataset.sh  scp_dp_ckpt.sh  select_ckpt.sh  solve_merge_conflict.sh  sysID_single_motor_collect_data.sh  sysID_single_motor_optimize.sh  vis_dep_graph.sh  vis_kine_tree.sh
tests/: cv2_jpeg_receiver.py  expected_output.txt  policy  robotis_op3_walking_out.txt  sustaina_op_walking_out.txt  test_330.py  test_APF.py  test_abppo.py  test_actuator_dynamics.py  test_apriltag.py  test_butterworth_jax.py  test_camera.py  test_chat.py  test_control_frequency.py  test_cv2.py  test_deck.py  test_dynamixel.py  test_ema.py  test_filters.py  test_imu.py  test_input_device.py  test_jax_torch.py  test_mink.py  test_mjcf.py  test_modeling.py  test_pose.py  test_ppo.py  test_read_motor.py  test_redis_client.py  test_redis_server.py  test_ref_motion.py  test_reward.py  test_robot_data.py  test_rotation.py  test_sample_command.py  test_sim.py  test_single_dynamixel.py  test_speaker.py  test_stereo.py  test_update_body_mass.py  (+2 more)
toddlerbot/manipulation/teleoperation/data_processing/retarget_lib/: LICENSE  README.md  pyproject.toml
toddlerbot/manipulation/teleoperation/data_processing/retarget_lib/examples/: mink_retarget_example.py
toddlerbot/manipulation/teleoperation/data_processing/retarget_lib/ik_configs/: smpl2g1_29dof_rev_1_0.json  vicon2g1_29dof_rev_1_0.json
toddlerbot/manipulation/teleoperation/data_processing/retarget_lib/src/retarget_lib/: mink_retarget.py
toddlerbot/manipulation/teleoperation/data_processing/retarget_lib/src/retarget_lib/mocap/: vicon_datastream.py
toddlerbot/manipulation/teleoperation/data_processing/retarget_lib/src/retarget_lib/utils/: draw.py
(+2205 files in other folders)
