[tool.ruff]
exclude = ["brax"]
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toddlerbot"
version = "0.0.0"
description = "A project for the toddlerbot system."
authors = [
    { name = "Toddy", email = "toddy@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
# license = { text = "MIT" }

dependencies = [
    "Adafruit-Blinka==8.39.1",
    "adafruit-circuitpython-bno08x==1.2.6",
    "colorama==0.4.6",
    "control==0.9.4",
    "diffusers==0.30.3",
    "dynamixel-sdk==3.7.31",
    "furo==2024.8.6",
    "gdown==5.2.0",
    "gin-config==0.5.0",
    "gym==0.26.2",
    "jax==0.4.28", 
    "jaxlib==0.4.28",
    "joblib==1.4.2",
    "line_profiler==4.1.3",
    "lz4==4.3.3",
    "matplotlib==3.7.4",
    "mediapy==1.2.0",
    "mink==0.0.3",
    "moviepy==1.0.3",
    "mujoco-mjx==3.2.4",
    "mypy==1.11.2",
    "networkx==3.1",
    "numpy==1.24.4",
    "opencv-python==4.9.0.80",
    "optuna==3.6.1",
    "pillow==10.2.0",
    "pygame==2.6.0",
    "pymunk==6.9.0",
    "pynput==1.7.6",
    "pyserial==3.5",
    "PyYAML==6.0.1",
    "scikit-image==0.24.0",
    "scikit-learn==1.3.2",
    "scikit-video==1.1.11",
    "scipy==1.10.1",
    "seaborn==0.11.2",
    "setuptools==69.1.1",
    "sphinx==8.0.2",
    "sphinx-tabs==3.4.5",
    "tensorboard==2.17.0",
    "tqdm==4.66.2",
    "transforms3d==0.4.1",
    "trimesh==3.21.7",
    "wandb==0.16.6",
    "zarr==2.18.3",
    "zmq==0.0.0",
    "pigar==2.1.1",
    "onshape-to-robot==0.3.24",
    "pytest==7.4.4",
    "pyglet==1.5.28",
    "cmaes==0.10.0",
    "optuna-dashboard==0.15.1",
    "psycopg2-binary==2.9.9",
    "sphinx-autobuild"
]

[project.optional-dependencies]
linux = ["jax[cuda12]==0.4.28", "torch==2.3.1", "torchvision==0.18.1"]
macos = []
windows = []
jetson = [
    "speech_recognition==3.11.0",
    "sounddevice==0.5.1",
    "soundfile==0.12.1",
    "librosa==0.10.2.post1",
    "openai==1.54.3"
]
steam_deck = []

[tool.setuptools.packages.find]
where = ["."]

[tool.sphinx]
build-dir = "docs/_build"
source-dir = "docs"
